--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Nick Honold. It uses data from mapbox.com and weatherstack.com</p>
         <img class="portrait" src="/img/me.jpg">
     </div>
 
